Fix more popup layout issues

--- a/source/popup/styles/popup.sass
+++ b/source/popup/styles/popup.sass
@@ -3,8 +3,7 @@ html
     height: 100%
 
 body
-    min-width: 280px
-    min-height: 400px
+    width: 350px
     height: 100%
     padding: 0px
     margin: 0
@@ -19,4 +18,3 @@ h1
     flex-direction: column
     min-height: 400px
     height: 100%
-    // overflow: hidden
